--- a/mall/WebContent/Member/Member.css
+++ b/mall/WebContent/Member/Member.css
@@ -1,7 +1,6 @@
-/* MemberÆú´õ¿¡¸¸ Àû¿ëµÇ´Â ½ºÅ¸ÀÏ */
+/* Memberï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½Ç´ï¿½ ï¿½ï¿½Å¸ï¿½ï¿½ */
 .me {
 	width : 1000px;
-	border : 1px double blue;
 }
 th {
 	background-color: #ccc;
